<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.thewalkinggame.app.gestionTeam.RecrutementActivity">

    <Button
        android:id="@+id/buttonInviterJoueur"
        android:text="@string/button_inviter"
        android:textSize="20sp"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <SearchView
        android:id="@+id/search_view"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/buttonInviterJoueur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:queryHint="@string/text_chercher_un_survivant"/>

    <TextView
        android:id="@+id/searchViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_view"
        android:layout_centerHorizontal="true" />


    <TextView
        android:id="@+id/text_nb_survivants_manquants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border"
        android:layout_marginTop="120dp"
        android:text="@string/text_nb_survivants_manquant"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nb_survivants_manquants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/text_nb_survivants_manquants"
        android:background="@drawable/table_border"
        android:layout_marginTop="120dp"
        android:text="@string/nb_survivants_manquant"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/joueur1"
        android:layout_below="@id/text_nb_survivants_manquants"
        android:background="@drawable/table_border"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="90dp">

            <TextView
                android:id="@+id/pseudo_joueur1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pseudo_joueur1"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/joueur2"
        android:layout_below="@id/joueur1"
        android:background="@drawable/table_border"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="90dp">

            <TextView
                android:id="@+id/pseudo_joueur2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pseudo_joueur2"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/joueur3"
        android:layout_below="@id/joueur2"
        android:background="@drawable/table_border"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="90dp">

            <TextView
                android:id="@+id/pseudo_joueur3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pseudo_joueur3"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/joueur4"
        android:layout_below="@id/joueur3"
        android:background="@drawable/table_border"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="90dp">

            <TextView
                android:id="@+id/pseudo_joueur4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pseudo_joueur4"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>
    </TableLayout>

</RelativeLayout>
