<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.thewalkinggame.app.admin.ManageGamesActivity"
    android:background="@drawable/fond_simon">

    <Button
        android:id="@+id/button_manage_quiz"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/manage_quiz"
        android:typeface="serif"
        android:textSize="30sp"
        android:textColor="#AAAAAA"
        android:layout_centerHorizontal="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="15pt"
        android:background="@drawable/btn_menu"/>

    <Button
        android:id="@+id/button_manage_reanimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_reanimer"
        android:typeface="serif"
        android:textSize="30sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#AAAAAA"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_manage_quiz"
        android:layout_marginTop="15pt"
        android:background="@drawable/btn_menu"/>

    <Button
        android:id="@+id/button_manage_simon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_simon"
        android:typeface="serif"
        android:textSize="30sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#AAAAAA"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_manage_reanimer"
        android:layout_marginTop="15pt"
        android:background="@drawable/btn_menu"/>

    <Button
        android:id="@+id/button_manage_head_upside_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_head_upside_down"
        android:typeface="serif"
        android:textSize="30sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#AAAAAA"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_manage_simon"
        android:layout_marginTop="15pt"
        android:background="@drawable/btn_menu"/>

    <Button
        android:id="@+id/button_manage_find_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_find_key"
        android:typeface="serif"
        android:textSize="30sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#AAAAAA"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_manage_head_upside_down"
        android:layout_marginTop="15pt"
        android:background="@drawable/btn_menu"/>

</RelativeLayout>
