<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scoretab"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:layout_marginTop="100dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/equipe1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/nom_equipe1"
                android:textStyle="bold"
                android:textSize="20dp"
                android:background="@drawable/table_border"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="100dp"
                android:text="@string/score"
                android:textStyle="bold"
                android:textSize="20dp"
                android:background="@drawable/table_border"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="80dp"
                android:text="@string/score_equipe1"
                android:textSize="20dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/table_border"/>

        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/joueur1equipe1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nom_joueur1_equipe1"
                android:textSize="20dp"
                android:background="@drawable/table_border"/>
            <TextView />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="80dp"
                android:text="@string/score_equipe1"
                android:textSize="20dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/table_border"/>
        </TableRow>
        </TableLayout>
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/joueur2equipe1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nom_joueur2_equipe1"
                android:textSize="20dp"
                android:background="@drawable/table_border"/>
            <TextView />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="80dp"
                android:text="@string/score_equipe1"
                android:textSize="20dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/table_border"/>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/joueur3equipe1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nom_joueur3_equipe1"
                android:textSize="20dp"
                android:background="@drawable/table_border"/>
            <TextView />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="80dp"
                android:text="@string/score_equipe1"
                android:textSize="20dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/table_border"/>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/joueur4equipe1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nom_joueur4_equipe1"
                android:textSize="20dp"
                android:background="@drawable/table_border"/>
            <TextView />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="80dp"
                android:text="@string/score_equipe1"
                android:textSize="20dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/table_border"/>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/nom_equipe2"
                android:textStyle="bold"
                android:textSize="20dp"
                android:background="@drawable/table_border"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="100dp"
                android:text="@string/score"
                android:textStyle="bold"
                android:textSize="20dp"
                android:background="@drawable/table_border"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="80dp"
                android:text="@string/score_equipe2"
                android:textSize="20dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/table_border"/>

        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nom_joueur1_equipe2"
                android:textSize="20dp"
                android:background="@drawable/table_border"/>
            <TextView />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="80dp"
                android:text="@string/score_equipe2"
                android:textSize="20dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/table_border"/>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nom_joueur2_equipe2"
                android:textSize="20dp"
                android:background="@drawable/table_border"/>
            <TextView />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="80dp"
                android:text="@string/score_equipe2"
                android:textSize="20dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/table_border"/>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nom_joueur3_equipe2"
                android:textSize="20dp"
                android:background="@drawable/table_border"/>
            <TextView />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="80dp"
                android:text="@string/score_equipe2"
                android:textSize="20dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/table_border"/>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nom_joueur4_equipe2"
                android:textSize="20dp"
                android:background="@drawable/table_border"/>
            <TextView />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="80dp"
                android:text="@string/score_equipe2"
                android:textSize="20dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/table_border"/>
        </TableRow>
    </TableLayout>

</LinearLayout>